Set up MSDOS implementation

--- a/GRACE/Info.plist
+++ b/GRACE/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>hello gimme btle thanks</string>
 </dict>
 </plist>
